Fix checkbox alignment due to new spacing

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/permissions-table.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/permissions-table.scss
@@ -37,6 +37,10 @@
         color: $charcoal;
         padding: 0;
     }
+        
+    th.content-center, td.content-center {
+        text-align: center;
+    }
 
     th.content-right,
     td.content-right {
